# lv_homework_6

./: customSpec.json  customSpecRaw.json
node/: Cargo.toml
node/src/: service.rs
pallets/poe/: Cargo.toml  README.md
pallets/poe/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
